--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="category_numbers">#9B59B6</color>
     <color name="category_fruits">#2980B9</color>
     <color name="category_colors">#17A589</color>
-    <color name="category_things">#2ECC71</color>
+<!--     <color name="category_things">#2ECC71</color> -->
     <color name="category_animals">#F0B27A</color>
     <color name="category_phrases">#E67E22</color>
 
